<resources>
    <string name="app_name">Adopt Me</string>
    <string name="login">ΣΥΝΔΕΣΗ</string>
    <string name="emailtext">email</string>
    <string name="passwordtext">Κωδικός</string>
    <string name="name">Όνομα</string>
    <string name="sign_up">Εγγραφη</string>
    <string name="email">Email</string>
    <string name="password">Κωδικός</string>
    <string name="password_verification">Επαλήθευση Κωδικού</string>
    <string name="click_to_log_in">Έχετε ήδη λογαριασμό;  Συνδεθείτε!</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="save">Αποθηκευση</string>
    <string name="log_in">Σύνδεση</string>
    <string name="loginbutton">Είσοδος</string>
    <string name="contact_number">Τηλέφωνο επικοινωνίας</string>
    <string name="city">Πόλη/Περιοχή</string>
    <string name="species">Είδος ζώου</string>
    <string name="age">Ηλικία ζώου</string>
    <string name="animal_name">Όνομα ζώου</string>
    <string name="add_post">Δημιουργια</string>
    <string name="description">Περιγραφή</string>
    <string name="main">Αρχική</string>
    <string name="myprofile">Το προφίλ μου</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="poster_name">Όνομα χρήστη</string>
    <string name="delete">ΔΙΑΓΡΑΦΗ</string>
    <string name="Pet_name">Όνομα:</string>
    <string name="pet_age">Ήλικια:</string>
    <string name="pet_city">Πολη/Περιοχή:</string>
    <string name="pet_species">Είδος:</string>
    <string name="app_name_header">Adopt Me</string>
    <string name="sign_up_from_login">Δεν έχεις account? Κάνε εγγραφή!</string>
</resources>