<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height = "match_parent">

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="53dp"
        android:autofillHints=""
        android:focusable="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff299f" />

    <EditText
        android:id="@+id/PasswordEmail"
        android:layout_width="338dp"
        android:layout_height="44dp"
        android:layout_above="@+id/button"
        android:layout_below="@+id/LoginEmail"
        android:layout_alignEnd="@+id/LoginEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="19dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#ffff299f" />

    <Button
        android:id="@+id/button"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="423dp"
        android:text="@string/click_to_log_in" />

</RelativeLayout>